<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playing_cards_background"
    tools:context=".activity.SlotMachineActivity">

    <Button
        android:id="@+id/slotMachine_spin"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:background="#d3455b"
        android:text="@string/button_slotMachine_spin_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/slotMachine_toBitcoinValue"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:background="#1aae9f"
        android:text="@string/button_piggyBank_valueOfYourBitcoins_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="177dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/piggyBank_coinBag"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/coinBag_contentDescription"
                app:srcCompat="@drawable/coin_bag_remvebg" />

            <TextView
                android:id="@+id/slotMachine_coins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textField_coins_defaultAmount"
                android:textColor="#f7c325"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/piggyBank_bitcoinLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/bitcoin_logo_contentDescription"
                app:srcCompat="@drawable/bitcoin_removebg" />

            <TextView
                android:id="@+id/slotMachine_bitcoins"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/textField_bitcoins_defaultAmount"
                android:textColor="#2c88d9"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/bettingCoins"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/editText_slotMachine_coinsToBet_text"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <ImageView
        android:id="@+id/slotMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slotMachine_contentDescription"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/slot_machine_empty" />

    <ImageView
        android:id="@+id/symbol1"
        android:layout_width="49dp"
        android:layout_height="103dp"
        android:background="@drawable/symbol_empty"
        android:contentDescription="@string/slotMachine_symbol_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/symbol3"
        android:layout_width="49dp"
        android:layout_height="103dp"
        android:background="@drawable/symbol_empty"
        android:contentDescription="@string/slotMachine_symbol_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/symbol2"
        android:layout_width="49dp"
        android:layout_height="103dp"
        android:background="@drawable/symbol_empty"
        android:contentDescription="@string/slotMachine_symbol_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

</androidx.constraintlayout.widget.ConstraintLayout>