<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dollar_signs_9_16"
    tools:context=".activity.BitcoinValueActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="78dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/piggyBank_bitcoinLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/bitcoin_removebg" />

            <TextView
                android:id="@+id/bitcoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textField_bitcoins_defaultAmount"
                android:textAlignment="center"
                android:textColor="#2c88d9"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_equals_text"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bitcoinValue_toPiggyBank"
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:background="#d3455b"
        android:text="@string/button_toPiggyBank_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/bitcoinValue_toSlotMachine"
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:background="#d3455b"
        android:text="@string/button_toSlotMachine_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <Spinner
        android:id="@+id/currencies"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:entries="@array/currencies"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="29dp"
        android:text="@string/textView_valueOfBitcoinsInCurrency_defaultText"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bitcoinValue_toPiggyBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencies"
        app:layout_constraintVertical_bias="0.493" />

</androidx.constraintlayout.widget.ConstraintLayout>