<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/falling_golden_coins_9_16"
    tools:context=".activity.PiggyBankActivity">

    <Button
        android:id="@+id/piggyBank_toSlotMachine"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:background="#d3455b"
        android:text="@string/button_toSlotMachine_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/piggyBank_toBitcoinValue"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:background="#1aae9f"
        android:text="@string/button_piggyBank_valueOfYourBitcoins_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="177dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/piggyBank_coinBag"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/coin_bag_remvebg" />

            <TextView
                android:id="@+id/coins"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textField_coins_defaultAmount"
                android:textColor="#f7c325"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/piggyBank_bitcoinLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/bitcoin_removebg" />

            <TextView
                android:id="@+id/bitcoins"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/textField_bitcoins_defaultAmount"
                android:textColor="#2c88d9"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/piggy"
        android:layout_width="410dp"
        android:layout_height="410dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/piggy_removebg" />

</androidx.constraintlayout.widget.ConstraintLayout>